@@ -4,6 +4,7 @@ Views 2.x-dev
     o #622602: Missing ORDER BY in some views with tables due to incorrect test for default table sorting.
     o #623498 by marcp: total_rows should be filled in if fetching all records.
     o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.
+    o #450346 by lefnire: Inherit Exposed Filters sometimes hides part of the parent exposed filters
 
   Other changes:
     o #580320 by chaps2: Allow "always use more link" setting.
